Changes in version 2.5-0

  o Added Predictor Effect Plots and Response Transformation dialogs to Models menu.
  
  o QQ plots may be drawn by groups.
  
  o Index plots may be marked by groups.

Changes in version 2.4-4

  o Fixed bug in recode dialog due to inconsistency with Recode() in car 3.0-0 (reported by Stylianos Serghiou).
  
  o Removed natwidth, natheight parameters from \includegraphics{} in Getting Started manual to avoid omission of figures from CRAN build of manual.

Changes to version 2.4-3

  o Updated several dialogs (scatterplot, scatterplot matrix, density plot, boxplot, QQ plot, 3D scatterplot, residual QQ plot, C+R plots, AV plots, influence plot, effect plots) for version 3.0-0 of the car package and version 4.0-1 of the effects package.

Changes to version 2.4-2

  o Updated Slovenian and Spanish translations (thanks to Matjaz Jeran andManuel Munoz Marquez).

  o A few updates to R-Rcmdr.pot supplying previously missing messages for translation.

Changes to version 2.4-1

  o Work around for Tk getSaveFile bug affecting Windows, causing doubled-up file extensions, e.g., .txt.txt (reported by Manuel Munoz Marquez).
  
  o Updated translations (with thanks to): Basque (Jose Ramon Rueda), Chinese (Tsung-wu Ho), German (Friedrich Leisch), Korean (Jong-Hwa Shin), Romanian (Adrian Dusa).

  o Small fixes.

Changes to version 2.4-0

  o The R Commander editor for Markdown and knitr documents is now a non-modal dialog, so may remain open while you work.
  
  o Improvement to the barplot dialog (suggestions of Beatriz Lacruz).
  
  o Added dialog for plotting the distribution of a discrete numeric variable (suggestion of Beatriz Lacruz).
  
  o Allow color selection in pie charts.
  
  o Small improvements to activation of menu items.
  
  o Rcmdr showData.threshold option now tests number of rows as well as number of columns.
  